--- a/package.json
+++ b/package.json
@@ -12,11 +12,18 @@
     "build-storybook": "storybook build"
   },
   "dependencies": {
+    "@dnd-kit/core": "^6.1.0",
+    "@dnd-kit/modifiers": "^7.0.0",
+    "@react-aria/button": "^3.9.3",
+    "@react-aria/listbox": "^3.11.5",
+    "@react-aria/overlays": "^3.21.1",
+    "@react-aria/select": "^3.14.3",
     "classnames": "^2.5.1",
     "framer-motion": "^11.0.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-popper": "^2.3.0",
+    "react-stately": "^3.30.1",
     "wicg-inert": "^3.1.2"
   },
   "devDependencies": {
