--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "framer-motion": "^11.0.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-draggable": "^4.4.6",
     "react-popper": "^2.3.0",
     "react-stately": "^3.30.1",
     "wicg-inert": "^3.1.2"
