--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@storybook/addon-onboarding": "^1.0.11",
     "@storybook/blocks": "^7.6.16",
     "@storybook/manager-api": "^7.6.16",
+    "@storybook/preview-api": "^8.1.2",
     "@storybook/react": "^7.6.16",
     "@storybook/react-vite": "^7.6.16",
     "@storybook/test": "^7.6.16",
