build: prepare build configuration and folder structure for the first publication

--- a/package.json
+++ b/package.json
@@ -2,63 +2,78 @@
   "name": "ui-components-books-ts",
   "private": true,
   "version": "0.0.0",
+  "license": "MIT",
   "type": "module",
+  "files": [
+    "/dist"
+  ],
+  "main": "dist/ui-components-books.umd.csj",
+  "module": "./dist/ui-components-books.js",
+  "exports": {
+    ".": {
+      "import": "./dist/ui-components-books.js",
+      "require": "./dist/ui-components-books.umd.cjs"
+    },
+    "./styles": "./dist/style.css"
+  },
   "scripts": {
     "dev": "vite",
-    "build": "tsc && vite build",
+    "build": "tsc && vite build --base=/ui-components-books/dist/",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build",
+    "storybook-docs": "storybook dev --docs",
+    "build-storybook-docs": "storybook build --docs",
     "prepare": "husky",
     "cz": "cz"
   },
   "dependencies": {
-    "@dnd-kit/core": "^6.1.0",
-    "@dnd-kit/modifiers": "^7.0.0",
-    "@react-aria/button": "^3.9.3",
-    "@react-aria/listbox": "^3.11.5",
-    "@react-aria/overlays": "^3.21.1",
-    "@react-aria/select": "^3.14.3",
-    "classnames": "^2.5.1",
-    "commitizen": "^4.3.0",
-    "framer-motion": "^11.0.8",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-draggable": "^4.4.6",
-    "react-popper": "^2.3.0",
-    "react-stately": "^3.30.1",
-    "wicg-inert": "^3.1.2"
+    "@dnd-kit/core": "6.1.0",
+    "@dnd-kit/modifiers": "7.0.0",
+    "@react-aria/button": "3.9.3",
+    "@react-aria/listbox": "3.11.5",
+    "@react-aria/overlays": "3.21.1",
+    "@react-aria/select": "3.14.3",
+    "classnames": "2.5.1",
+    "commitizen": "4.3.0",
+    "framer-motion": "11.0.8",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-draggable": "4.4.6",
+    "react-popper": "2.3.0",
+    "react-stately": "3.30.1",
+    "wicg-inert": "3.1.2"
   },
   "devDependencies": {
-    "@commitlint/cli": "^19.2.1",
-    "@commitlint/config-conventional": "^19.1.0",
-    "@storybook/addon-essentials": "^7.6.16",
-    "@storybook/addon-interactions": "^7.6.16",
-    "@storybook/addon-links": "^7.6.16",
-    "@storybook/addon-mdx-gfm": "^7.6.16",
-    "@storybook/addon-onboarding": "^1.0.11",
-    "@storybook/blocks": "^7.6.16",
-    "@storybook/manager-api": "^7.6.16",
-    "@storybook/preview-api": "^8.1.2",
-    "@storybook/react": "^7.6.16",
-    "@storybook/react-vite": "^7.6.16",
-    "@storybook/test": "^7.6.16",
-    "@types/react": "^18.2.55",
-    "@types/react-dom": "^18.2.19",
-    "@typescript-eslint/eslint-plugin": "^6.21.0",
-    "@typescript-eslint/parser": "^6.21.0",
-    "@vitejs/plugin-react": "^4.2.1",
-    "cz-conventional-changelog": "^3.3.0",
-    "eslint": "^8.56.0",
-    "eslint-plugin-import": "^2.29.1",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.4.5",
-    "eslint-plugin-storybook": "^0.6.15",
-    "husky": "^9.0.11",
-    "storybook": "^7.6.16",
-    "typescript": "^5.2.2",
-    "vite": "^5.1.0"
+    "@commitlint/cli": "19.2.1",
+    "@commitlint/config-conventional": "19.1.0",
+    "@storybook/addon-essentials": "7.6.16",
+    "@storybook/addon-interactions": "7.6.16",
+    "@storybook/addon-links": "7.6.16",
+    "@storybook/addon-mdx-gfm": "7.6.16",
+    "@storybook/addon-onboarding": "1.0.11",
+    "@storybook/blocks": "7.6.16",
+    "@storybook/manager-api": "7.6.16",
+    "@storybook/preview-api": "8.1.2",
+    "@storybook/react": "7.6.16",
+    "@storybook/react-vite": "7.6.16",
+    "@storybook/test": "7.6.16",
+    "@types/react": "18.2.55",
+    "@types/react-dom": "18.2.19",
+    "@typescript-eslint/eslint-plugin": "6.21.0",
+    "@typescript-eslint/parser": "6.21.0",
+    "@vitejs/plugin-react": "4.2.1",
+    "cz-conventional-changelog": "3.3.0",
+    "eslint": "8.56.0",
+    "eslint-plugin-import": "2.29.1",
+    "eslint-plugin-react-hooks": "4.6.0",
+    "eslint-plugin-react-refresh": "0.4.5",
+    "eslint-plugin-storybook": "0.6.15",
+    "husky": "9.0.11",
+    "storybook": "7.6.16",
+    "typescript": "5.2.2",
+    "vite": "5.1.0"
   },
   "config": {
     "commitizen": {
