--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "@typescript-eslint/eslint-plugin": "6.21.0",
     "@typescript-eslint/parser": "6.21.0",
     "@vitejs/plugin-react": "4.2.1",
+    "auto": "^11.1.6",
     "cz-conventional-changelog": "3.3.0",
     "eslint": "8.56.0",
     "eslint-plugin-import": "2.29.1",
