--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "@vitejs/plugin-react": "4.2.1",
     "auto": "^11.1.6",
     "cz-conventional-changelog": "3.3.0",
+    "dotenv": "^16.4.5",
     "eslint": "8.56.0",
     "eslint-plugin-import": "2.29.1",
     "eslint-plugin-react-hooks": "4.6.0",
