--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
     "build-storybook-docs": "storybook build --docs",
     "prepare": "husky",
     "cz": "cz",
-    "release": "npm run build && bash ./scripts/release.sh"
+    "release": "npm run build && bash ./scripts/release.sh",
+    "version": "auto version",
+    "changelog": "auto changelog"
   },
   "dependencies": {
     "@dnd-kit/core": "6.1.0",
@@ -48,6 +50,10 @@
     "wicg-inert": "3.1.2"
   },
   "devDependencies": {
+    "@auto-it/conventional-commits": "^11.3.6",
+    "@auto-it/first-time-contributor": "^11.3.6",
+    "@auto-it/npm": "^11.3.6",
+    "@auto-it/released": "^11.3.6",
     "@commitlint/cli": "19.2.1",
     "@commitlint/config-conventional": "19.1.0",
     "@storybook/addon-essentials": "7.6.16",
