--- a/.autorc
+++ b/.autorc
@@ -5,7 +5,7 @@
     "first-time-contributor"
   ],
   "owner": "bb-frontend-leader",
-  "repo": "books-ui",
+  "repo": "UI-Components-books-TS",
   "name": "Frontend-leader",
   "email": "coor_frontend@booksandbooksdigital.com.co",
   "labels": [
