fix: update owner field in .autorc to match the correct repository

--- a/.autorc
+++ b/.autorc
@@ -4,7 +4,7 @@
     "released",
     "first-time-contributor"
   ],
-  "owner": "bb-frontend-leader",
+  "owner": "UI-Components-Books-Books",
   "repo": "UI-Components-books-TS",
   "name": "Frontend-leader",
   "email": "coor_frontend@booksandbooksdigital.com.co",
