--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "@react-aria/select": "3.14.3",
     "classnames": "2.5.1",
     "commitizen": "4.3.0",
-    "framer-motion": "11.0.8",
+    "gsap": "^3.14.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-draggable": "4.4.6",
