--- a/package.json
+++ b/package.json
@@ -77,9 +77,11 @@
     "dotenv": "^16.4.5",
     "eslint": "8.56.0",
     "eslint-plugin-import": "2.29.1",
+    "eslint-plugin-jsx-a11y": "^6.10.2",
     "eslint-plugin-react-hooks": "4.6.0",
     "eslint-plugin-react-refresh": "0.4.5",
     "eslint-plugin-storybook": "0.6.15",
+    "eslint-plugin-unused-imports": "^4.3.0",
     "husky": "9.0.11",
     "storybook": "7.6.16",
     "typescript": "5.2.2",
