--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
   "module": "./dist/books-ui.js",
   "exports": {
     ".": {
+      "types": "./dist/index.d.ts",
       "import": "./dist/books-ui.js",
-      "require": "./dist/books-ui.umd.cjs",
-      "types": "./dist/index.d.ts"
+      "require": "./dist/books-ui.umd.cjs"
     },
     "./styles": "./dist/style.css"
   },
@@ -35,6 +35,7 @@
   "dependencies": {
     "@dnd-kit/core": "6.1.0",
     "@dnd-kit/modifiers": "7.0.0",
+    "@popperjs/core": "^2.11.8",
     "@react-aria/button": "3.9.3",
     "@react-aria/listbox": "3.11.5",
     "@react-aria/overlays": "3.21.1",
@@ -54,19 +55,13 @@
     "@auto-it/first-time-contributor": "^11.3.6",
     "@auto-it/npm": "^11.3.6",
     "@auto-it/released": "^11.3.6",
+    "@chromatic-com/storybook": "^4.1.3",
     "@commitlint/cli": "19.2.1",
     "@commitlint/config-conventional": "19.1.0",
-    "@storybook/addon-essentials": "7.6.16",
-    "@storybook/addon-interactions": "7.6.16",
-    "@storybook/addon-links": "7.6.16",
-    "@storybook/addon-mdx-gfm": "7.6.16",
-    "@storybook/addon-onboarding": "1.0.11",
-    "@storybook/blocks": "7.6.16",
-    "@storybook/manager-api": "7.6.16",
-    "@storybook/preview-api": "8.1.2",
-    "@storybook/react": "7.6.16",
-    "@storybook/react-vite": "7.6.16",
-    "@storybook/test": "7.6.16",
+    "@storybook/addon-docs": "10.1.11",
+    "@storybook/addon-links": "10.1.11",
+    "@storybook/addon-onboarding": "10.1.11",
+    "@storybook/react-vite": "10.1.11",
     "@types/react": "18.2.55",
     "@types/react-dom": "18.2.19",
     "@typescript-eslint/eslint-plugin": "6.21.0",
@@ -80,10 +75,10 @@
     "eslint-plugin-jsx-a11y": "^6.10.2",
     "eslint-plugin-react-hooks": "4.6.0",
     "eslint-plugin-react-refresh": "0.4.5",
-    "eslint-plugin-storybook": "0.6.15",
+    "eslint-plugin-storybook": "10.1.11",
     "eslint-plugin-unused-imports": "^4.3.0",
     "husky": "9.0.11",
-    "storybook": "7.6.16",
+    "storybook": "10.1.11",
     "typescript": "5.2.2",
     "vite": "5.1.0",
     "vite-plugin-dts": "^3.9.1"
