--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "files": [
     "/dist"
   ],
-  "main": "dist/books-ui.umd.csj",
+  "main": "dist/books-ui.umd.cjs",
   "module": "./dist/books-ui.js",
   "exports": {
     ".": {
@@ -17,6 +17,23 @@
     },
     "./styles": "./dist/style.css"
   },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/UI-Components-Books-Books/UI-Components-books-TS"
+  },
+  "homepage": "https://books-ui-docs.netlify.app",
+  "bugs": {
+    "url": "https://github.com/UI-Components-Books-Books/UI-Components-books-TS/issues"
+  },
+  "keywords": [
+    "react",
+    "components",
+    "ui",
+    "typescript",
+    "component-library",
+    "ui-library",
+    "react-components"
+  ],
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build --base=/books-ui/dist/ && rm -rf dist/assets",
@@ -35,20 +52,21 @@
   "dependencies": {
     "@dnd-kit/core": "6.1.0",
     "@dnd-kit/modifiers": "7.0.0",
-    "@popperjs/core": "^2.11.8",
     "@react-aria/button": "3.9.3",
     "@react-aria/listbox": "3.11.5",
     "@react-aria/overlays": "3.21.1",
     "@react-aria/select": "3.14.3",
     "clsx": "^2.1.1",
-    "commitizen": "4.3.0",
-    "gsap": "^3.14.2",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
     "react-draggable": "4.4.6",
     "react-popper": "2.3.0",
     "react-stately": "3.30.1",
     "wicg-inert": "3.1.2"
+  },
+  "peerDependencies": {
+    "@popperjs/core": "^2.11.0",
+    "gsap": "^3.14.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@auto-it/conventional-commits": "^11.3.6",
@@ -58,6 +76,7 @@
     "@chromatic-com/storybook": "^4.1.3",
     "@commitlint/cli": "19.2.1",
     "@commitlint/config-conventional": "19.1.0",
+    "@popperjs/core": "^2.11.8",
     "@storybook/addon-docs": "10.1.11",
     "@storybook/addon-links": "10.1.11",
     "@storybook/addon-onboarding": "10.1.11",
@@ -68,6 +87,7 @@
     "@typescript-eslint/parser": "6.21.0",
     "@vitejs/plugin-react": "4.2.1",
     "auto": "^11.2.0",
+    "commitizen": "4.3.0",
     "cz-conventional-changelog": "3.3.0",
     "dotenv": "^16.4.5",
     "eslint": "8.56.0",
@@ -77,7 +97,10 @@
     "eslint-plugin-react-refresh": "0.4.5",
     "eslint-plugin-storybook": "10.1.11",
     "eslint-plugin-unused-imports": "^4.3.0",
+    "gsap": "^3.14.2",
     "husky": "9.0.11",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
     "storybook": "10.1.11",
     "typescript": "5.2.2",
     "vite": "5.1.0",
