--- a/package.json
+++ b/package.json
@@ -54,8 +54,7 @@
     "changelog": "auto changelog"
   },
   "dependencies": {
-    "@dnd-kit/core": "6.1.0",
-    "@dnd-kit/modifiers": "7.0.0",
+    "@atlaskit/pragmatic-drag-and-drop": "^1.7.7",
     "@react-aria/button": "3.9.3",
     "@react-aria/listbox": "3.11.5",
     "@react-aria/overlays": "3.21.1",
