--- a/package.json
+++ b/package.json
@@ -54,32 +54,32 @@
     "changelog": "auto changelog"
   },
   "dependencies": {
-    "@atlaskit/pragmatic-drag-and-drop": "^1.7.7",
+    "@atlaskit/pragmatic-drag-and-drop": "1.7.7",
     "@react-aria/button": "3.9.3",
     "@react-aria/listbox": "3.11.5",
     "@react-aria/overlays": "3.21.1",
     "@react-aria/select": "3.14.3",
-    "clsx": "^2.1.1",
+    "clsx": "2.1.1",
     "react-draggable": "4.4.6",
     "react-popper": "2.3.0",
     "react-stately": "3.30.1",
     "wicg-inert": "3.1.2"
   },
   "peerDependencies": {
-    "@popperjs/core": "^2.11.0",
-    "gsap": "^3.14.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "@popperjs/core": "2.11.0",
+    "gsap": "3.14.0",
+    "react": "18.2.0",
+    "react-dom": "18.2.0"
   },
   "devDependencies": {
-    "@auto-it/conventional-commits": "^11.3.6",
-    "@auto-it/first-time-contributor": "^11.3.6",
-    "@auto-it/npm": "^11.3.6",
-    "@auto-it/released": "^11.3.6",
-    "@chromatic-com/storybook": "^4.1.3",
+    "@auto-it/conventional-commits": "11.3.6",
+    "@auto-it/first-time-contributor": "11.3.6",
+    "@auto-it/npm": "11.3.6",
+    "@auto-it/released": "11.3.6",
+    "@chromatic-com/storybook": "4.1.3",
     "@commitlint/cli": "19.2.1",
     "@commitlint/config-conventional": "19.1.0",
-    "@popperjs/core": "^2.11.8",
+    "@popperjs/core": "2.11.8",
     "@storybook/addon-docs": "10.1.11",
     "@storybook/addon-links": "10.1.11",
     "@storybook/addon-onboarding": "10.1.11",
@@ -89,25 +89,25 @@
     "@typescript-eslint/eslint-plugin": "6.21.0",
     "@typescript-eslint/parser": "6.21.0",
     "@vitejs/plugin-react": "4.2.1",
-    "auto": "^11.2.0",
+    "auto": "11.2.0",
     "commitizen": "4.3.0",
     "cz-conventional-changelog": "3.3.0",
-    "dotenv": "^16.4.5",
+    "dotenv": "16.4.5",
     "eslint": "8.56.0",
     "eslint-plugin-import": "2.29.1",
-    "eslint-plugin-jsx-a11y": "^6.10.2",
+    "eslint-plugin-jsx-a11y": "6.10.2",
     "eslint-plugin-react-hooks": "4.6.0",
     "eslint-plugin-react-refresh": "0.4.5",
     "eslint-plugin-storybook": "10.1.11",
-    "eslint-plugin-unused-imports": "^4.3.0",
-    "gsap": "^3.14.2",
+    "eslint-plugin-unused-imports": "4.3.0",
+    "gsap": "3.14.2",
     "husky": "9.0.11",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "storybook": "10.1.11",
     "typescript": "5.2.2",
     "vite": "5.1.0",
-    "vite-plugin-dts": "^3.9.1"
+    "vite-plugin-dts": "3.9.1"
   },
   "config": {
     "commitizen": {
