--- a/package.json
+++ b/package.json
@@ -66,10 +66,10 @@
     "wicg-inert": "3.1.2"
   },
   "peerDependencies": {
-    "@popperjs/core": "2.11.0",
-    "gsap": "3.14.0",
-    "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "@popperjs/core": "^2.11.0",
+    "gsap": "^3.14.0",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0"
   },
   "devDependencies": {
     "@auto-it/conventional-commits": "11.3.6",
